<resources>
    <string name="app_name">Calculator</string>
    <string name="_0" translatable="false">0</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="add" translatable="false">+</string>
    <string name="sub" translatable="false">-</string>
    <string name="mul" translatable="false">*</string>
    <string name="div" translatable="false">/</string>
    <string name="reset" translatable="false">C</string>
    <string name="comma" translatable="false">,</string>
    <string name="equal" translatable="false"> = </string>
    <string name="left_brace" translatable="false">(</string>
    <string name="right_brace" translatable="false">)</string>
    <string name="back" translatable="false">DEL</string>
    <string name="result_text">Result</string>
    <string name="expression_text">Expression</string>
    <string name="date">date</string>
    <string name="confirm_delete">Item will be deleted</string>
    <string name="cancel">Cancel</string>
    <string name="OK" translatable="false">OK</string>
    <string name="wrong_format">Wrong format</string>
    <string name="division_by_zero">Division by zero</string>
    <string name="id" translatable="false">id</string>
    <string name="comment">Comment</string>
    <string name="history_item_alert_title">Choise action</string>
    <string-array name="history_item_alert_menu">
        <item>Comment</item>
        <item>Delete row</item>
        <item>Protect from cleaning</item>
    </string-array>
    <string name="history_item_alert_comment">Comment</string>
    <string name="history_item_alert_delete">Delete row</string>
    <string name="comment_title">Enter a comment</string>
    <string name="search">Search</string>
    <string name="search_title">Search:</string>
    <string name="select_all">select all</string>
    <string name="select_none">select none</string>
    <string name="delete">delete</string>
    <string name="clear">Clear history</string>
    <string name="clear_history_message">Clear history?</string>
    <string name="lock">Locked</string>
    <string name="history">History</string>
    <string name="exponentiation">^</string>
    <string name="sqrt">√</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ctg">ctg</string>
    <string name="ln">ln</string>
    <string name="lg">lg</string>
    <string name="pi">π</string>
    <string name="e">e</string>
</resources>
