<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.ButtonBarLayout
        android:id="@+id/select_buttons_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/button_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@android:drawable/checkbox_on_background"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/select_all"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_select_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@android:drawable/checkbox_off_background"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/select_none"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_confirm_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@android:drawable/ic_menu_delete"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textSize="12sp" />

    </android.support.v7.widget.ButtonBarLayout>

    <TextView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/searchString"
        android:paddingStart="8dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/history_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        />


</LinearLayout>

